tests/rosetta/out/Dart/caesar-cipher-1.error
run error: exit status 254
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:78:6: Error: 'main' is already declared in this scope.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:63:6: Context: Previous declaration of 'main'.
void main() {
     ^^^^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:5:46: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
    if (s.toString().substring(i, (i as num) + 1) == ch) {
                                             ^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:8:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:18:15: Error: A value of type 'num' can't be returned from a function with return type 'int'.
    return 65 + (idx as num);
              ^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:22:15: Error: A value of type 'num' can't be returned from a function with return type 'int'.
    return 97 + (idx as num);
              ^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:31:31: Error: A value of type 'Object' can't be returned from a function with return type 'String'.
 - 'Object' is from 'dart:core'.
    return ((upper is String) ? upper.substring(n - 65, n - 64) : (upper as List).sublist(n - 65, n - 64));
                              ^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:34:31: Error: A value of type 'Object' can't be returned from a function with return type 'String'.
 - 'Object' is from 'dart:core'.
    return ((lower is String) ? lower.substring(n - 97, n - 96) : (lower as List).sublist(n - 97, n - 96));
                              ^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:53:53: Error: The argument type 'num' can't be assigned to the parameter type 'int?'.
    out = out + shiftRune(s.substring(i, (i as num) + 1), k);
                                                    ^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:54:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:79:3: Error: Can't use 'main' because it is declared more than once.
  main();
  ^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:103:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:132:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:137:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/caesar-cipher-1.dart:141:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
